@@ -9,7 +9,8 @@ require_once ("/var/www/html/modules/agent_console/libs/ECCP.class.php");
 $x = new ECCP();
 try {
 	print "Connect...\n";
-	$x->connect("localhost", "agentconsole", "agentconsole");
+	$cr = $x->connect("localhost", "agentconsole", "agentconsole");
+	if (isset($cr->failure)) die('Failed to connect to ECCP - '.$cr->failure->message."\n");
     print "Pidiendo histograma de campaña...\n";
     $r = $x->getcampaignqueuewait($argv[1], $argv[2]);
     print_r($r);
