@@ -7,7 +7,8 @@ if (count($argv) < 2) die("Use: {$argv[0]} incomingqueue\n");
 $x = new ECCP();
 try {
     print "Connect...\n";
-    $x->connect("localhost", "agentconsole", "agentconsole");
+	$cr = $x->connect("localhost", "agentconsole", "agentconsole");
+	if (isset($cr->failure)) die('Failed to connect to ECCP - '.$cr->failure->message."\n");
     $r = $x->getqueuescript($argv[1]);
     print_r($r);
     print "Disconnect...\n";
