@@ -1,3 +1,5 @@
+* Agent Console: modify connect function in order to return result of login
+  command, and use this to check whether ECCP login succeeded. 
 * Calls per Agent: make call type specification case-insensitive
 * Dialer: Specify a proper CallerID string as 'Agent/XXXX Login' to prevent 
   the softphones from displaying confusing strings as the CallerID.
